# webgl_demo

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  template.html
assets/models/ac/: ac.gltf  license.txt
assets/shaders/: font.fs  font.vs  object.fs  object.vs  skybox.fs  skybox.vs
output/: index.js  package-lock.json  package.json  webgl_demo.js
output/public/: webgl_demo.html  webgl_demo.js  webgl_demo.wasm
src/: main.c  main.cpp
src/app/: app.c  app.cpp  app.h
src/core/: br_object.h  br_texture.h  camera.cpp  camera.h  core.h  font.c  font.h  input.cpp  input.h  ins_object.h  lighting.c  lighting.h  load_object.c  load_object.cpp  load_object.h  mesh.cpp  mesh.h  object.h  random.c  shader.cpp  shader.h  shaders.h  skybox.c  skybox.cpp  skybox.h  text_render.cpp  text_render.h  texture.cpp  texture.h  timing.c  tp.h  water.c  window.c  window.h
